--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Daisy-Miller--A-Study_208
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: James, Henry
@@ -18,6 +21,8 @@ description: A unique novella during its time, Daisy Miller tells the story of t
   While author Henry James was met with some criticism of the work, including reviews
   that held the story as "an outrage on American girlhood," the novella continues
   to be one of James' most popular works.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/208#Daisy-Miller--A-Study
 gutenberg_issued: '2008-07-03'
 gutenberg_type: Text
 identifiers:
